@startuml ERD_dApp_QuanLyThueNha

skinparam linetype ortho
skinparam roundcorner 5
skinparam entity {
    BackgroundColor #FEFECE
    BorderColor #A80036
}
skinparam ArrowColor #A80036

title Sơ đồ quan hệ (ERD) - dApp Quản Lý Thuê Nhà\n(PostgreSQL - Tên cột tiếng Việt)

entity "nguoi_dung" as nguoi_dung {
    * **ma_nguoi_dung** : SERIAL <<PK>>
    --
    dia_chi_vi : VARCHAR(42) <<UNIQUE>>
    * ho_ten : VARCHAR(100)
    * email : VARCHAR(100) <<UNIQUE>>
    so_dien_thoai : VARCHAR(15)
    * mat_khau_hash : VARCHAR(255)
    so_cccd : VARCHAR(20) <<UNIQUE>>
    anh_cccd_mat_truoc : TEXT
    anh_cccd_mat_sau : TEXT
    anh_dai_dien : TEXT
    * vai_tro : VARCHAR(20)
    * da_xac_thuc : BOOLEAN
    * dang_hoat_dong : BOOLEAN
    * ngay_tao : TIMESTAMP
    * ngay_cap_nhat : TIMESTAMP
    ..
    <<CHECK>> vai_tro IN ('admin','chu_nha','nguoi_thue')
}

entity "bat_dong_san" as bat_dong_san {
    * **ma_bat_dong_san** : SERIAL <<PK>>
    --
    * ma_chu_so_huu : INT <<FK>>
    * ten : VARCHAR(200)
    * dia_chi : VARCHAR(500)
    * thanh_pho : VARCHAR(100)
    * quan_huyen : VARCHAR(100)
    phuong_xa : VARCHAR(100)
    mo_ta : TEXT
    * loai_bat_dong_san : VARCHAR(30)
    * tong_so_phong : INT
    vi_do : DECIMAL(10,8)
    kinh_do : DECIMAL(11,8)
    * ngay_tao : TIMESTAMP
    * ngay_cap_nhat : TIMESTAMP
    ..
    <<CHECK>> loai IN ('chung_cu','nha_o','nha_tro')
}

entity "hinh_anh" as hinh_anh {
    * **ma_hinh_anh** : SERIAL <<PK>>
    --
    * loai_doi_tuong : VARCHAR(20)
    * ma_doi_tuong : INT
    * duong_dan_anh : TEXT
    * la_anh_chinh : BOOLEAN
    * ngay_tao : TIMESTAMP
    ..
    <<CHECK>> loai_doi_tuong IN ('bat_dong_san','phong')
}

entity "phong" as phong {
    * **ma_phong** : SERIAL <<PK>>
    --
    * ma_bat_dong_san : INT <<FK>>
    * so_phong : VARCHAR(20)
    * tang : INT
    * dien_tich : DECIMAL(6,2)
    * gia_thue : DECIMAL(12,2)
    * tien_dat_coc : DECIMAL(12,2)
    * trang_thai : VARCHAR(20)
    mo_ta : TEXT
    tien_nghi : JSONB
    * so_nguoi_toi_da : INT
    * ngay_tao : TIMESTAMP
    * ngay_cap_nhat : TIMESTAMP
    ..
    <<UK>> ma_bat_dong_san + so_phong
    <<CHECK>> trang_thai IN ('trong','da_thue','bao_tri')
}

entity "hop_dong" as hop_dong {
    * **ma_hop_dong** : SERIAL <<PK>>
    --
    * ma_phong : INT <<FK>>
    * ma_nguoi_thue : INT <<FK>>
    * ma_chu_nha : INT <<FK>>
    * ngay_bat_dau : DATE
    * ngay_ket_thuc : DATE
    * tien_thue_hang_thang : DECIMAL(12,2)
    * tien_dat_coc : DECIMAL(12,2)
    * ngay_thanh_toan_hang_thang : SMALLINT
    dieu_khoan : TEXT
    * trang_thai : VARCHAR(20)
    ma_giao_dich_blockchain : VARCHAR(66)
    dia_chi_hop_dong_bc : VARCHAR(42)
    thoi_gian_ky : TIMESTAMP
    * ngay_tao : TIMESTAMP
    * ngay_cap_nhat : TIMESTAMP
    ..
    <<CHECK>> ngay_ket_thuc > ngay_bat_dau
    <<CHECK>> ngay_tt BETWEEN 1 AND 28
}

entity "dich_vu" as dich_vu {
    * **ma_dich_vu** : SERIAL <<PK>>
    --
    * ma_bat_dong_san : INT <<FK>>
    * ten_dich_vu : VARCHAR(100)
    * don_gia : DECIMAL(10,2)
    * don_vi : VARCHAR(20)
    * dang_hoat_dong : BOOLEAN
    * ngay_tao : TIMESTAMP
    * ngay_cap_nhat : TIMESTAMP
}

entity "su_dung_dich_vu" as su_dung_dich_vu {
    * **ma_su_dung** : SERIAL <<PK>>
    --
    * ma_hop_dong : INT <<FK>>
    * ma_dich_vu : INT <<FK>>
    * thang_tinh_tien : DATE
    * chi_so_cu : DECIMAL(10,2)
    * chi_so_moi : DECIMAL(10,2)
    * so_luong_su_dung : DECIMAL(10,2)
    * thanh_tien : DECIMAL(12,2)
    * ngay_tao : TIMESTAMP
    ..
    <<UK>> ma_hop_dong + ma_dich_vu + thang_tinh_tien
    <<CHECK>> chi_so_moi >= chi_so_cu
}

entity "hoa_don" as hoa_don {
    * **ma_hoa_don** : SERIAL <<PK>>
    --
    * ma_hop_dong : INT <<FK>>
    * thang_tinh_tien : DATE
    * tien_thue : DECIMAL(12,2)
    * tong_tien_dich_vu : DECIMAL(12,2)
    * phi_khac : DECIMAL(12,2)
    * giam_gia : DECIMAL(12,2)
    * tong_tien : DECIMAL(12,2)
    * trang_thai : VARCHAR(20)
    * han_thanh_toan : DATE
    ghi_chu : TEXT
    * ngay_tao : TIMESTAMP
    * ngay_cap_nhat : TIMESTAMP
    ..
    <<UK>> ma_hop_dong + thang_tinh_tien
}

entity "thanh_toan" as thanh_toan {
    * **ma_thanh_toan** : SERIAL <<PK>>
    --
    * ma_hoa_don : INT <<FK>>
    * ma_nguoi_thanh_toan : INT <<FK>>
    * so_tien : DECIMAL(12,2)
    * phuong_thuc : VARCHAR(20)
    ma_giao_dich_blockchain : VARCHAR(66)
    * trang_thai : VARCHAR(20)
    thoi_gian_thanh_toan : TIMESTAMP
    * ngay_tao : TIMESTAMP
    ..
    <<CHECK>> phuong_thuc IN ('tien_mat','chuyen_khoan','crypto')
}

entity "yeu_cau_sua_chua" as yeu_cau_sua_chua {
    * **ma_yeu_cau** : SERIAL <<PK>>
    --
    * ma_phong : INT <<FK>>
    * ma_nguoi_thue : INT <<FK>>
    * tieu_de : VARCHAR(200)
    mo_ta : TEXT
    * danh_muc : VARCHAR(20)
    * muc_do_uu_tien : VARCHAR(10)
    * trang_thai : VARCHAR(20)
    hinh_anh : JSONB
    thoi_gian_hoan_thanh : TIMESTAMP
    ghi_chu_hoan_thanh : TEXT
    * ngay_tao : TIMESTAMP
    * ngay_cap_nhat : TIMESTAMP
}

entity "thong_bao" as thong_bao {
    * **ma_thong_bao** : SERIAL <<PK>>
    --
    * ma_nguoi_dung : INT <<FK>>
    * tieu_de : VARCHAR(200)
    * noi_dung : TEXT
    * loai : VARCHAR(20)
    * da_doc : BOOLEAN
    loai_lien_quan : VARCHAR(50)
    ma_lien_quan : INT
    * ngay_tao : TIMESTAMP
    ..
    <<CHECK>> loai IN ('thanh_toan','hop_dong','sua_chua','he_thong')
}

' ============ Quan hệ ============

nguoi_dung ||--o{ bat_dong_san : "sở hữu\n(ma_chu_so_huu)"
nguoi_dung ||--o{ hop_dong : "thuê\n(ma_nguoi_thue)"
nguoi_dung ||--o{ hop_dong : "cho thuê\n(ma_chu_nha)"
nguoi_dung ||--o{ thanh_toan : "thanh toán\n(ma_nguoi_thanh_toan)"
nguoi_dung ||--o{ yeu_cau_sua_chua : "báo sự cố\n(ma_nguoi_thue)"
nguoi_dung ||--o{ thong_bao : "nhận\n(ma_nguoi_dung)"

bat_dong_san ||--o{ phong : "chứa phòng\n(ma_bat_dong_san)"
bat_dong_san ||--o{ dich_vu : "cung cấp DV\n(ma_bat_dong_san)"

phong ||--o{ hop_dong : "được thuê\n(ma_phong)"
phong ||--o{ yeu_cau_sua_chua : "có sự cố\n(ma_phong)"

hop_dong ||--o{ su_dung_dich_vu : "sử dụng DV\n(ma_hop_dong)"
hop_dong ||--o{ hoa_don : "sinh hóa đơn\n(ma_hop_dong)"

dich_vu ||--o{ su_dung_dich_vu : "ghi nhận\n(ma_dich_vu)"

hoa_don ||--o{ thanh_toan : "thanh toán\n(ma_hoa_don)"

@enduml
